--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <meta name="author" content="William Holt">
+        <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <title>{% block title %}{% endblock %} - lynq.me</title>
         {% block head %}{% endblock %}
     </head>
