--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
         <meta name="author" content="William Holt">
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
         <title>{% block title %}{% endblock %} - lynq.me</title>
         {% block head %}{% endblock %}
     </head>
