--- a/templates/bts/index.html
+++ b/templates/bts/index.html
@@ -7,13 +7,15 @@
 {% endblock %}
 
 {% block body %}
-<iframe id="discord-widget" src="https://discordapp.com/widget?id=77041788564545536&theme=dark" allowtransparency="true" frameborder="0"></iframe>
+<div id="wrapper">
+    <iframe id="widget" src="https://discordapp.com/widget?id=77041788564545536&theme=dark" allowtransparency="true" frameborder="0"></iframe>
+</div>
 
 <script type="text/javascript">
     window.setInterval("reloadWidget();", 1000 * 60);
 
     function reloadWidget() {
-        var frame = document.getElementById("discord-widget");
+        var frame = document.getElementById("widget");
         frame.src = frame.src;
     }
 </script>
