--- a/static/css/bts.css
+++ b/static/css/bts.css
@@ -11,6 +11,9 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #widget {
