--- a/static/css/bts.css
+++ b/static/css/bts.css
@@ -17,3 +17,10 @@ body, html {
     width: 600px;
     height: calc(100% - 40px);
 }
+
+@media only screen and (max-width: 640px) {
+    #widget {
+        height: 100%;
+        width: 100%;
+    }
+}
