/lemmy: implement navigation layout

--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -16,9 +16,13 @@
         <hr>
         <nav>
             <a href="#add-lemmy">Add Lemmy to a Server</a>
+            <span>•</span>
             <a href="#commands">Commands</a>
+            <span>•</span>
             <a href="#emotes">Emotes</a>
+            <span>•</span>
             <a href="#stickers">Stickers</a>
+            <span>•</span>
             <a href="#company">Company</a>
         </nav>
     </section>
