--- a/static/css/lemmy.css
+++ b/static/css/lemmy.css
@@ -35,3 +35,16 @@ hr {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav a {
+    margin-left: 10px;
+    margin-right: 10px;
+
+    font-size: 24px;
+}
