--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -30,7 +30,7 @@
     <section>
         <h2>Add Lemmy to a Server</h2>
         <hr>
-        <!--  -->
+        &gt;&gt; <a href="https://discordapp.com/oauth2/authorize?client_id=168168362654957569&scope=bot&permissions=0">Click here</a> &lt;&lt;
     </section>
     <a name="commands"></a>
     <section>
