/lemmy: implement temporary commands section

--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -36,7 +36,7 @@
     <section>
         <h2>Commands</h2>
         <hr>
-        <!--  -->
+        <p>Send Lemmy "<code>/help</code>" in a direct message</p>
     </section>
     <a name="emotes"></a>
     <section>
