/lemmy: implement company section

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,7 @@
 :root {
     --bg-dark: #4C4C4C;
-    --bg-darker: #3C3C3D;
-    --bg-darkest: #303030;
+    --bg-darker: #303030;
+    --bg-darkest: #202020;
     --fg-plain: #F5F5F5;
     --fg-highlight: #33B5E5;
     --fg-highlight-dark: #2D9FC9;
