/lemmy: add source code section

--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -19,6 +19,8 @@
             <span>•</span>
             <a href="#commands">Commands</a>
             <span>•</span>
+            <a href="#source-code">Source Code</a>
+            <span>•</span>
             <a href="#emotes">Emotes</a>
             <span>•</span>
             <a href="#stickers">Stickers</a>
@@ -37,6 +39,12 @@
         <h2>Commands</h2>
         <hr>
         <p>Send Lemmy "<code>/help</code>" in a direct message</p>
+    </section>
+    <a name="source-code"></a>
+    <section>
+        <h2>Source Code</h2>
+        <hr>
+        &gt;&gt; <a href="https://github.com/halbrd/Lemmy">Click here</a> &lt;&lt;
     </section>
     <a name="emotes"></a>
     <section class="emotes-section">
