/lemmy: reorder sections

--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -15,11 +15,11 @@
         <h2>Navigation</h2>
         <hr>
         <nav>
-            <a href="#add-lemmy">Add Lemmy to a Server</a>
-            <span>•</span>
             <a href="#commands">Commands</a>
             <span>•</span>
             <a href="#source-code">Source Code</a>
+            <span>•</span>
+            <a href="#add-lemmy">Add Lemmy to a Server</a>
             <span>•</span>
             <a href="#emotes">Emotes</a>
             <span>•</span>
@@ -27,12 +27,6 @@
             <span>•</span>
             <a href="#company">Company</a>
         </nav>
-    </section>
-    <a name="add-lemmy"></a>
-    <section>
-        <h2>Add Lemmy to a Server</h2>
-        <hr>
-        &gt;&gt; <a href="https://discordapp.com/oauth2/authorize?client_id=168168362654957569&scope=bot&permissions=0">Click here</a> &lt;&lt;
     </section>
     <a name="commands"></a>
     <section>
@@ -46,7 +40,12 @@
         <hr>
         &gt;&gt; <a href="https://github.com/halbrd/Lemmy">Click here</a> &lt;&lt;
     </section>
-    <a name="emotes"></a>
+    <a name="add-lemmy"></a>
+    <section>
+        <h2>Add Lemmy to a Server</h2>
+        <hr>
+        &gt;&gt; <a href="https://discordapp.com/oauth2/authorize?client_id=168168362654957569&scope=bot&permissions=0">Click here</a> &lt;&lt;
+    </section><a name="emotes"></a>
     <section class="emotes-section">
         <h2>Emotes</h2>
         <hr>
