--- a/static/css/bts.css
+++ b/static/css/bts.css
@@ -22,5 +22,7 @@ body, html {
     #widget {
         height: 100%;
         width: 100%;
+
+        background: linear-gradient(to bottom, #7289da 50%, #202225 50%);
     }
 }
