--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -2,6 +2,8 @@
 
 {% block title %}Lemmy{% endblock %}
 
+{% block scale %}0.6{% endblock %}
+
 {% block head %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/lemmy.css') }}">
 {% endblock %}
