/lemmy: add planned features section

--- a/templates/lemmy/index.html
+++ b/templates/lemmy/index.html
@@ -21,6 +21,8 @@
             <span>•</span>
             <a href="#source-code">Source Code</a>
             <span>•</span>
+            <a href="#planned-features">Planned Features</a>
+            <span>•</span>
             <a href="#add-lemmy">Add Lemmy to a Server</a>
             <span>•</span>
             <a href="#emotes">Emotes</a>
@@ -41,6 +43,12 @@
         <h2>Source Code</h2>
         <hr>
         &gt;&gt; <a href="https://github.com/halbrd/Lemmy">Click here</a> &lt;&lt;
+    </section>
+    <a name="planned-features"></a>
+    <section>
+        <h2>Planned Features</h2>
+        <hr>
+        &gt;&gt; <a href="https://github.com/halbrd/Lemmy/issues">Click here</a> &lt;&lt;
     </section>
     <a name="add-lemmy"></a>
     <section>
